# quasar

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
crates/homaya-algorithms/: Cargo.toml
crates/homaya-algorithms/src/: lib.rs
crates/homaya-backends/: Cargo.toml
crates/homaya-backends/src/: lib.rs
crates/homaya-compiler/: Cargo.toml
crates/homaya-compiler/src/: lib.rs
crates/homaya-core/: Cargo.toml
crates/homaya-core/src/: circuit.rs  complex.rs  error.rs  gate.rs  lib.rs
crates/homaya-ir/: Cargo.toml
crates/homaya-ir/src/: lib.rs
crates/homaya-runtime/: Cargo.toml
crates/homaya-runtime/src/: lib.rs
crates/homaya-sim/: Cargo.toml
crates/homaya-sim/src/: lib.rs  simulator.rs  statevector.rs
crates/homaya-types/: Cargo.toml
crates/homaya-types/src/: lib.rs
docs/: index.html
docs/learn/: course.html  index.html
examples/rust/: algorithms_showcase.rs  demo.rs  sim_demo.rs  verify_correctness.rs
tools/homaya-cli/: Cargo.toml
tools/homaya-cli/src/: main.rs
