[workspace]
resolver = "2"
members = [
    "crates/homaya-core",
    "crates/homaya-ir",
    "crates/homaya-sim",
    "crates/homaya-compiler",
    "crates/homaya-runtime",
    "crates/homaya-backends",
    "crates/homaya-algorithms",
    "tools/homaya-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Pran <pran@dataxlr8.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pdaxt/homaya"
homepage = "https://github.com/pdaxt/homaya"
description = "Quantum computing framework - some connections transcend distance"
keywords = ["quantum", "computing", "simulation", "qubits"]
categories = ["science", "simulation", "wasm"]

[workspace.dependencies]
# Core dependencies
num-complex = "0.4"
num-traits = "0.2"
rand = "0.8"
rayon = "1.10"
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing
criterion = "0.5"
proptest = "1.5"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.bench]
lto = true
codegen-units = 1
