[package]
name = "homaya-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core quantum primitives - qubits, gates, circuits"

[dependencies]
num-complex.workspace = true
num-traits.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde", "num-complex/serde"]

[dev-dependencies]
proptest.workspace = true

[[example]]
name = "demo"
path = "../../examples/rust/demo.rs"
