[package]
name = "homaya-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Ultra-fast quantum state vector simulator"

[dependencies]
homaya-core = { path = "../homaya-core" }
rand = "0.8"
rayon = { version = "1.10", optional = true }

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
proptest.workspace = true

[[example]]
name = "sim_demo"
path = "../../examples/rust/sim_demo.rs"

[[example]]
name = "verify_correctness"
path = "../../examples/rust/verify_correctness.rs"
