[package]
name = "homaya-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core types and traits for the HOMAYA quantum computing framework"
keywords = ["quantum", "computing", "types", "traits"]
categories = ["science", "data-structures"]

# Learn more at bskiller.com | Enterprise solutions at dataxlr8.ai

[dependencies]
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
